--- a/lab02/build.gradle
+++ b/lab02/build.gradle
@@ -1,20 +1,22 @@
 plugins {
-    id "application"
+    id 'application'
 }
 
 apply plugin: 'java'
 
-ext {
-   javaMainClass = "gradleDemo.Demo"
-}
- 
-application {
-    mainClassName = javaMainClass
-}
 repositories {
     mavenCentral()
 }
 
 dependencies {
-   compile group: 'commons-validator', name: 'commons-validator', version: '1.4.1'
+    // compile 'org.apache.commons:commons-csv:1.6','org.apache.commons:commons-validator:1.4.1'
+    //  compile group: 'commons-validator', 'org.apache.commons',name: 'commons-validator','commons-csv',
+    //  version: '1.4.1','1.7'
+    //  compile group: 'commons-validator', name: 'commons-validator', version: '1.4.1'
+    compile group: 'commons-validator', name: 'commons-validator', version: '1.4.1'
+    compile group: 'org.apache.commons', name: 'commons-csv', version: '1.7'
+}
+
+task application {
+    mainClassName = 'Demo'
 }
